erDiagram
    mathematical_concepts {
        UUID concept_id PK
        VARCHAR name
        VARCHAR domain
        VARCHAR level_min
    }
    concept_definitions {
        UUID definition_id PK
        UUID concept_id FK
        VARCHAR type
        TEXT content_latex
    }
    theorems {
        UUID theorem_id PK
        VARCHAR name
        TEXT statement_latex
    }
    pedagogical_pitfalls {
        UUID pitfall_id PK
        UUID concept_id FK
        TEXT description_short
    }
    pedagogical_analogies {
        UUID analogy_id PK
        UUID concept_id FK
        TEXT description_latex
    }
    concept_applications {
        UUID application_id PK
        UUID concept_id FK
        VARCHAR domain
        TEXT description_latex
    }
    historical_notes {
        UUID note_id PK
        UUID concept_id FK "Nullable"
        UUID theorem_id FK "Nullable"
        TEXT content_latex
    }

    concept_prerequisites {
        UUID concept_id FK
        UUID prerequisite_concept_id FK
        VARCHAR type
    }
    concept_theorem_relation {
        UUID concept_id FK
        UUID theorem_id FK
        VARCHAR relation_type
    }

    mathematical_concepts ||--o{ concept_definitions : has
    mathematical_concepts ||--o{ pedagogical_pitfalls : has
    mathematical_concepts ||--o{ pedagogical_analogies : has
    mathematical_concepts ||--o{ concept_applications : has
    mathematical_concepts ||--o{ historical_notes : associated_with
    theorems ||--o{ historical_notes : associated_with

    mathematical_concepts ||--o{ concept_prerequisites : requires
    mathematical_concepts ||--o{ concept_theorem_relation : defines
    theorems ||--o{ concept_theorem_relation : used_by
